[tool.poetry]
name = "invoice-generator"
version = "0.1.0"
description = ""
authors = ["Thomas Leigh <thomas@fluently.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
